salary 薪酬系统v3 基础代码